--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -17,7 +17,18 @@ model:
     C: 4.0
     max_iter: 2000
     n_jobs: -1
+  transformer:
+    model_name: distilbert-base-uncased
+    max_length: 256
+    train_batch_size: 16
+    eval_batch_size: 32
+    learning_rate: 2e-5
+    num_train_epochs: 3
+    weight_decay: 0.01
+    warmup_ratio: 0.1
+    gradient_accumulation_steps: 1
 
 eval:
   threshold: 0.5
   metrics: [f1, roc_auc, accuracy]
+  exp_name: tfidf_logreg_baseline
